--- a/index.html
+++ b/index.html
@@ -72,16 +72,37 @@
   <div id="error" class="error"></div>
 
   <script>
+    const API_URL = 'https://script.google.com/macros/s/AKfycbxnF93-jDoEcCr8ysciZpPiQ6Zp2_D9HjicfmTgYn3hB7bK_EHid6lQ8i0ANS5_7MW3/exec';
+    const UPDATE_URL = 'https://script.google.com/macros/s/AKfycbxnF93-jDoEcCr8ysciZpPiQ6Zp2_D9HjicfmTgYn3hB7bK_EHid6lQ8i0ANS5_7MW3/exec?action=update';
+
     const columns = ['Disponible', 'En_casting', 'Asignado'];
+
     columns.forEach(id => {
       new Sortable(document.getElementById(id), {
         group: 'shared',
         animation: 150,
-        ghostClass: 'dragging'
+        ghostClass: 'dragging',
+        onAdd: function (evt) {
+          const card = evt.item;
+          const nombre = card.getAttribute('data-nombre');
+          const nuevoEstado = evt.to.id.replace(/_/g, ' ');
+          console.log(`Movido: ${nombre} → ${nuevoEstado}`);
+
+          fetch(UPDATE_URL, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ nombre, estado: nuevoEstado })
+          })
+          .then(res => res.json())
+          .then(response => {
+            console.log('Actualización exitosa:', response);
+          })
+          .catch(error => {
+            console.error('Error al actualizar:', error);
+          });
+        }
       });
     });
-
-    const API_URL = 'https://script.google.com/macros/s/AKfycbxnF93-jDoEcCr8ysciZpPiQ6Zp2_D9HjicfmTgYn3hB7bK_EHid6lQ8i0ANS5_7MW3/exec';
 
     fetch(API_URL)
       .then(res => res.json())
@@ -92,8 +113,6 @@
         }
 
         data.forEach(actor => {
-          console.log(actor);
-
           const nombre = actor["Nombre"] || "(Sin nombre)";
           const idioma = actor["Idioma"] || "(Sin idioma)";
           const genero = actor["Género"] || actor["Genero"] || "(Sin género)";
